@@ -42,6 +42,15 @@
 -->
 
     <listitem>
+      <para>April 30th, 2006</para>
+      <itemizedlist>
+        <listitem>
+          <para>[randy] - Updated to NFS Utilities-1.0.8.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>April 29th, 2006</para>
       <itemizedlist>
         <listitem>
