@@ -4,24 +4,12 @@
   <!ENTITY % general-entities SYSTEM "../../general.ent">
   %general-entities;
 
-    <!-- Inserted as a reminder to do this. The mention of a test suite
-         is usually right before the root user installation commands. Please
-         delete these 12 (including one blank) lines after you are done.-->
-
-    <!-- Use one of the two mentions below about a test suite,
-         delete the line that is not applicable. Of course, if the
-         test suite uses syntax other than "make check", revise the
-         line to reflect the actual syntax to run the test suite -->
-
-    <!-- <para>This package does not come with a test suite.</para> -->
-    <!-- <para>To test the results, issue: <command>make check</command>.</para> -->
-
   <!ENTITY nfs-utils-download-http "http://ftp.kernel.org/pub/linux/utils/nfs/nfs-utils-&nfs-utils-version;.tar.gz">
   <!ENTITY nfs-utils-download-ftp  "ftp://ftp.kernel.org/pub/linux/utils/nfs/nfs-utils-&nfs-utils-version;.tar.gz">
-  <!ENTITY nfs-utils-md5sum        "8f863120261cd572ad320a9152581e11">
-  <!ENTITY nfs-utils-size          "396 KB">
-  <!ENTITY nfs-utils-buildsize     "5.8 MB">
-  <!ENTITY nfs-utils-time          "0.2 SBU">
+  <!ENTITY nfs-utils-md5sum        "ee7903365255b7d840a45be4d6e2b0e2">
+  <!ENTITY nfs-utils-size          "508 KB">
+  <!ENTITY nfs-utils-buildsize     "12.2 MB">
+  <!ENTITY nfs-utils-time          "0.3 SBU">
 ]>
 
 <sect1 id="nfs-utils" xreflabel="NFS Utilities-&nfs-utils-version;">
@@ -46,7 +34,7 @@
     <title>Introduction to NFS Utilities</title>
 
     <para>The <application>NFS Utilities</application> package contains the
-    userspace server and client tools necessary to use the kernel's nfs
+    userspace server and client tools necessary to use the kernel's NFS
     abilities. NFS is a protocol that allows sharing file systems over the
     network.</para>
 
@@ -72,6 +60,7 @@
       </listitem>
     </itemizedlist>
 
+    <!--
     <bridgehead renderas="sect3">Additional Downloads</bridgehead>
     <itemizedlist spacing='compact'>
       <listitem>
@@ -79,6 +68,7 @@
         url="&patch-root;/nfs-utils-&nfs-utils-version;-gcc4-1.patch"/></para>
       </listitem>
     </itemizedlist>
+    -->
 
     <bridgehead renderas="sect3">NFS Utilities Dependencies</bridgehead>
 
@@ -86,11 +76,22 @@
     <para role="required"><xref linkend="portmap"/></para>
 
     <bridgehead renderas="sect4">Optional</bridgehead>
-    <para role="optional"><ulink
-    url="http://www.monkey.org/~provos/libevent/">libevent</ulink> and <ulink
-    url="http://www.citi.umich.edu/projects/nfsv4/linux/libnfsidmap/">libnsfidmap</ulink>
-    for nfsv4 support, and <xref linkend="mitkrb"/> or <xref linkend="heimdal"/>
-    for gss (RPC Security) support.</para>
+    <para role="optional"><xref linkend="tcpwrappers"/></para>
+
+    <bridgehead renderas="sect4">Optional for NFSv4 Support</bridgehead>
+    <para role="optional"><xref linkend="pkgconfig"/> and
+    <ulink url="http://www.monkey.org/~provos/libevent/">libevent</ulink> and
+    <ulink url="http://www.citi.umich.edu/projects/nfsv4/linux/">libnsfidmap</ulink>
+    </para>
+
+    <bridgehead renderas="sect4">Optional for GSS (RPC Security) Support</bridgehead>
+    <para role="optional"><xref linkend="pkgconfig"/>, and
+    <xref linkend="mitkrb"/> or
+    <xref linkend="heimdal"/> or
+    <ulink url="http://www.citi.umich.edu/projects/nfsv4/linux/">libgssapi</ulink>, and
+    <ulink url="http://www.citi.umich.edu/projects/nfsv4/linux/">librpcsecgss</ulink>;
+    for additional SPKM-3 support, install
+    <ulink url="http://www.citi.umich.edu/projects/nfsv4/linux/">SPKM-3</ulink></para>
 
     <para condition="html" role="usernotes">User Notes:
     <ulink url="&blfs-wiki;/nfs-utils"/></para>
@@ -117,13 +118,14 @@
 
   </sect2>
 
-  <sect2 role="installation" id='nfs-utils-install' xreflabel='NFS Utilities Installation'>
+  <sect2 role="installation" id='nfs-utils-install'
+         xreflabel='NFS Utilities Installation'>
     <title>Installation of NFS Utilities</title>
 
-    <para>Before you compile the program, you need to be sure the
+    <para>Before you compile the program, ensure that the
     <systemitem class="username">nobody</systemitem> user and
-    <systemitem class="groupname">nogroup</systemitem> group are available.
-    You can add these by running the following commands as the
+    <systemitem class="groupname">nogroup</systemitem> group have been
+    created. You can add them by running the following commands as the
     <systemitem class="username">root</systemitem> user:</para>
 
 <screen role="root"><userinput>groupadd -g 99 nogroup &amp;&amp;
@@ -136,10 +138,10 @@ useradd -c "Unprivileged Nobody" -d /dev/null -g nogroup \
       on some filesystems that do not have support for sparse files.  The
       <systemitem class="username">nobody</systemitem> and <systemitem
       class="groupname">nogroup</systemitem> values are relatively arbitrary.
-      The impact on a server is nil if the exports file is configured
-      correctly.  If it is misconfigured, the <command>ls -l</command> or
-      <command>ps</command> listing will show a uid or gid number of 65534
-      instead of a name. The client uses <systemitem
+      The impact on a server is nil if the <filename>exports</filename> file
+      is configured correctly. If it is misconfigured, an
+      <command>ls -l</command> or <command>ps</command> listing will show a
+      uid or gid number of 65534 instead of a name. The client uses <systemitem
       class="username">nobody</systemitem> only as the user running
       <command>rpc.statd</command>.</para>
     </note>
@@ -147,14 +149,15 @@ useradd -c "Unprivileged Nobody" -d /dev/null -g nogroup \
     <para>Install <application>NFS Utilities</application> by running
     the following commands:</para>
 
-<screen><userinput>patch -Np1 -i ../nfs-utils-&nfs-utils-version;-gcc4-1.patch &amp;&amp;
-./configure --prefix=/usr --sysconfdir=/etc \
-    --disable-nfsv4 --disable-gss &amp;&amp;
+<screen><userinput>./configure --prefix=/usr \
+            --sysconfdir=/etc \
+            --disable-nfsv4 \
+            --disable-gss &amp;&amp;
 make</userinput></screen>
 
-    <para>Now, as the <systemitem class="username">root</systemitem> user:</para>
+    <para>This package does not come with a test suite.</para>
 
-<screen role='root'><userinput>make install</userinput></screen>
+    <para>Now, as the <systemitem class="username">root</systemitem> user:</para>
 
     <note>
       <para>If your <filename class="directory">/usr</filename> directory
@@ -164,16 +167,21 @@ make</userinput></screen>
       above <command>./configure</command> command.</para>
     </note>
 
+<screen role='root'><userinput>make install</userinput></screen>
+
   </sect2>
 
   <sect2 role="commands">
     <title>Command Explanations</title>
 
     <para><parameter>--disable-nfsv4</parameter>: Disables support
-    for NFS Version 4.</para>
+    for NFS version 4.</para>
 
     <para><parameter>--disable-gss</parameter>: Disables support for
     RPCSEC GSS (RPC Security).</para>
+
+    <para><option>--with-tcp-wrappers</option>: Use this option to enable
+    tcpwrappers support.</para>
 
   </sect2>
 
@@ -184,20 +192,20 @@ make</userinput></screen>
       <title>Server Configuration</title>
 
       <para><filename>/etc/exports</filename> contains the exported directories
-      on NFS servers. Refer to the exports manual page for the syntax of this
-      file. Also refer to the "NFS HowTo" available at <ulink
-      url="http://nfs.sourceforge.net/nfs-howto/"/> on how to configure the
-      servers and clients in a secure manner. For example, for sharing the
-      <filename class="directory">/home</filename> directory over the local
-      network, the following line may be added:</para>
+      on NFS servers. Refer to the <filename>exports.5</filename> manual page
+      for the syntax of this file. Also refer to the "NFS HowTo" available at
+      <ulink url="http://nfs.sourceforge.net/nfs-howto/"/> for information on
+      how to configure the servers and clients in a secure manner. For example,
+      for sharing the <filename class="directory">/home</filename> directory
+      over the local network, the following line may be added:</para>
 
-<screen role="root"><userinput>/home 192.168.0.0/255.255.255.0(rw,anonuid=99,anongid=99)</userinput></screen>
+<screen role="root"><userinput>/home <replaceable>&lt;192.168.0.0/255.255.255.0&gt;</replaceable>(rw,anonuid=99,anongid=99)</userinput></screen>
 
       <indexterm zone="nfs-utils nfs-utils-server-config">
         <primary sortas="e-etc-exportfs">/etc/exportfs</primary>
       </indexterm>
 
-      <sect4  id="nfs-utils-server-init">
+      <sect4 id="nfs-utils-server-init">
         <title>Boot Script</title>
 
         <para>Install the <filename>/etc/rc.d/init.d/nfs-server</filename>
@@ -228,6 +236,16 @@ EOF</userinput></screen>
 
       </sect4>
 
+      <sect4 id="nfs-utils-server-wrappers-support">
+        <title>tcpwrappers Configuration</title>
+
+        <para>If you enabled support for <application>tcpwrappers</application>,
+        ensure you have an entry in the <filename>/etc/hosts.allow</filename>
+        file for access from the <command>portmap</command> daemon if you have a
+        restrictive <filename>/etc/hosts.deny</filename> file.</para>
+
+      </sect4>
+
     </sect3>
 
     <sect3 id='nfs-utils-client-config'>
@@ -249,7 +267,6 @@ EOF</userinput></screen>
 
       <sect4  id="nfs-utils-client-init">
         <title>Boot Script</title>
-
 
         <para>Install the <filename>/etc/rc.d/init.d/nfs-client</filename>
         init script included in the
