@@ -1,3 +1,7 @@
+2006-04-30 Randy McMurchy <randy@linuxfromscratch.org>
+	* Added a command to delete a pid file that the NFS server
+	  leaves behind
+
 2006-04-27 Bruce Dubbs <bdubbs@linuxfromscratch.org>
 	* Changed autofs order number to 52 so it will be run after cleanfs
 
